[package]
name = "rsgba"
version = "0.1.0"
readme = "README.md"
keywords = ["gameboy advance", "agb", "emulator"]
categories = ["emulators"]
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
once_cell = "1.8.0"
bitflags = "2.1.0"
bincode = "1.3.3"
bitvec = "1.0.1"
bytesize = "1.1.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.18"
rand = "0.8.5"
sdl2 = "0.35.2"

[[bin]]
name = "rsgba"
path = "src/main.rs"